--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite 2.x + Vue 3.x + Tailwind 2.x</title>
+    <title>mikalai2006 CV</title>
     <link
       rel="preload"
       href="/font/Inter-roman.var.woff2"
@@ -16,6 +16,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
